Adjusted DefaultContextMenu parameters to necessary information is passed and compilable plus other small changes and additions
Compilation success (haven't tested if will fail to run correctly yet)

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,4 @@ GlobalCode/luple/
 !GlobalCode/luple/README.md
 !GlobalCode/luple/luple.h
 !GlobalCode/luple/type-loophole.h
+CombinedBaseMultiview/
