--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -191,9 +191,6 @@
     <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\MultiViewDoc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\MultiViewView.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\OtherView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -211,6 +208,12 @@
     </ClInclude>
     <ClInclude Include="$(CPPSource)\GlobalCode_IniData\IniDataV2.h">
       <Filter>Header Files\GlobalCode</Filter>
+    </ClInclude>
+    <ClInclude Include="GenericFrameView.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MainFrameView.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
