Starting LinkedTreeView code(CustomTreeView  thats gets data sent to and from a NodeTree derived type such as in older hkbhv .xml commenter)

--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
@@ -361,6 +361,7 @@
     <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\TreePageNode.h" />
     <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\WP_APPDefines.h" />
     <ClInclude Include="GenericFrameView.h" />
+    <ClInclude Include="LinkedTreeView.h" />
     <ClInclude Include="MFView.h" />
   </ItemGroup>
   <ItemGroup>
