--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -209,6 +209,9 @@
     <ClInclude Include="MFView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LinkedTreeView.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\MultiView.ico">
